--- a/src/css/style.css
+++ b/src/css/style.css
@@ -16,6 +16,40 @@ a {
     margin: 0 auto
 }
 
+.btn {
+    width: 220px;
+    height: 65px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #fff;
+    font-size: 18px;
+    font-weight: 700;
+    border: 1px solid rgba(0, 0, 0, .2);
+    box-shadow: 0 4px 15px rgba(0, 0, 0, .2);
+    cursor: pointer;
+    transition: .3s all;
+    outline: 0
+}
+
+.btn_white {
+    background-color: #fff
+}
+
+.btn_dark {
+    background-color: #303030;
+    color: #fff;
+    border: none
+}
+
+.btn_min {
+    height: 50px
+}
+
+.btn:hover {
+    box-shadow: 0 4px 30px rgba(0, 0, 0, .3)
+}
+
 .divider {
     width: 330px;
     height: 1px;
@@ -203,4 +237,134 @@ a {
     color: #000;
     font-size: 22px;
     font-weight: 700
+}
+
+
+.offer {
+    padding: 70px 0 100px 0;
+    position: relative
+}
+
+.offer .container {
+    display: flex;
+    justify-content: space-between
+}
+
+.offer .bgc_y {
+    position: absolute;
+    width: 1109px;
+    height: 780px;
+    background: rgba(243, 255, 222, .45);
+    z-index: -1;
+    top: 50px
+}
+
+.offer__text {
+    width: 580px
+}
+
+
+.offer__descr {
+    font-size: 18px;
+    margin-top: 30px;
+    font-weight: 300;
+    line-height: 24px
+}
+
+.offer__action {
+    display: flex;
+    align-items: center;
+    justify-content: flex-end
+}
+
+.offer__advantages {
+    width: 330px;
+    margin-top: 50px
+}
+
+.offer__advantages h2 {
+    font-weight: 700;
+    font-size: 20px;
+    margin-top: 20px
+}
+
+
+.offer__advantages h2:first-child {
+    margin-top: 70px
+}
+
+.offer__advantages-text {
+    margin-top: 20px;
+    font-size: 18px;
+    font-weight: 300;
+    line-height: 21px
+}
+
+.offer__slider {
+    width: 650px;
+    margin-top: 50px;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+    position: relative;
+}
+
+.offer__slider-counter {
+    display: flex;
+    width: 180px;
+    align-items: center;
+    font-size: 24px;
+    color: rgba(0, 0, 0, .5)
+}
+
+
+.offer__slider-wrapper {
+    width: 100%;
+    margin-top: 15px;
+    box-shadow: 0 4px 30px rgba(0, 0, 0, .25);
+    position: relative;
+}
+
+
+.offer__slider-prev {
+    margin-right: 10px;
+    cursor: pointer
+}
+
+.offer__slider-next {
+    margin-left: 10px;
+    cursor: pointer
+}
+
+.offer__slider #current {
+    font-size: 48px;
+    font-weight: 700;
+    color: #000
+}
+
+.offer__slide {
+    width: 100%;
+    height: 390px;
+}
+
+[data-slide-to] {
+    box-sizing: content-box;
+    flex: 0 1 auto;
+    width: 30px;
+    height: 6px;
+    margin-right: 3px;
+    margin-left: 3px;
+    cursor: pointer;
+    background-color: #fff;
+    background-clip: padding-box;
+    border-top: 10px solid transparent;
+    border-bottom: 10px solid transparent;
+    opacity: .5;
+    transition: opacity .6s ease;
+}
+
+.offer__slide img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover
 }
