--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,4 +1,6 @@
+
 @import url(https://fonts.googleapis.com/css?family=Roboto:300,400,700&display=swap&subset=cyrillic-ext);
+
 
 * {
     box-sizing: border-box;
@@ -9,12 +11,8 @@
 
 a {
     text-decoration: none
-}
+} 
 
-.container {
-    max-width: 1200px;
-    margin: 0 auto
-}
 
 .btn {
     width: 220px;
@@ -48,6 +46,11 @@ a {
 
 .btn:hover {
     box-shadow: 0 4px 30px rgba(0, 0, 0, .3)
+} 
+
+.container {
+    max-width: 1200px;
+    margin: 0 auto
 }
 
 .divider {
@@ -67,12 +70,11 @@ a {
     align-items: center;
     height: 150px;
     padding: 0 100px
-}
-
+} 
 .header__left-block {
     display: flex;
     justify-content: space-between;
-    min-width: 550px
+    width: 550px
 }
 
 .header__logo {
@@ -94,8 +96,7 @@ a {
     font-weight: 700;
     font-size: 18px;
     color: #303030
-}
-
+} 
 .header__link:after {
     content: '';
     position: absolute;
@@ -148,9 +149,7 @@ a {
 
 .sidepanel__icon img {
     width: 100%
-}
-
-
+} 
 .preview {
     padding: 28px 0 100px 0;
     position: relative
@@ -237,9 +236,7 @@ a {
     color: #000;
     font-size: 22px;
     font-weight: 700
-}
-
-
+} 
 .offer {
     padding: 70px 0 100px 0;
     position: relative
@@ -248,21 +245,20 @@ a {
 .offer .container {
     display: flex;
     justify-content: space-between
-}
+} 
 
-.offer .bgc_y {
+/* .offer .bgc_y {
     position: absolute;
-    width: 1109px;
+    width: 70vw ;
     height: 780px;
     background: rgba(243, 255, 222, .45);
     z-index: -1;
     top: 50px
-}
+} */
 
 .offer__text {
     width: 580px
 }
-
 
 .offer__descr {
     font-size: 18px;
@@ -275,8 +271,7 @@ a {
     display: flex;
     align-items: center;
     justify-content: flex-end
-}
-
+} 
 .offer__advantages {
     width: 330px;
     margin-top: 50px
@@ -287,7 +282,6 @@ a {
     font-size: 20px;
     margin-top: 20px
 }
-
 
 .offer__advantages h2:first-child {
     margin-top: 70px
@@ -308,6 +302,18 @@ a {
     align-items: flex-end;
     position: relative;
 }
+.carousel-indicators{
+    position: absolute;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    z-index: 15;
+    display: flex;
+    justify-content: center;
+    margin-right: 15%;
+    margin-left: 15%;
+    list-style: none;
+}
 
 .offer__slider-counter {
     display: flex;
@@ -317,14 +323,12 @@ a {
     color: rgba(0, 0, 0, .5)
 }
 
-
 .offer__slider-wrapper {
     width: 100%;
     margin-top: 15px;
     box-shadow: 0 4px 30px rgba(0, 0, 0, .25);
     position: relative;
-}
-
+} 
 
 .offer__slider-prev {
     margin-right: 10px;
@@ -340,13 +344,15 @@ a {
     font-size: 48px;
     font-weight: 700;
     color: #000
-}
-
+} 
 .offer__slide {
     width: 100%;
     height: 390px;
 }
-
+.offer__slide_img {
+    width: 650px;
+    height: 390px;
+}
 [data-slide-to] {
     box-sizing: content-box;
     flex: 0 1 auto;
@@ -367,7 +373,7 @@ a {
     width: 100%;
     height: 100%;
     object-fit: cover
-}
+} 
 
 
 .calculating {
@@ -510,7 +516,7 @@ a {
     width: 100%;
     height: 200px;
     object-fit: cover
-}
+} 
 
 .menu__item-subtitle {
     font-weight: 700;
@@ -544,158 +550,167 @@ a {
 }
 
 .order {
-    padding-bottom: 80px;
-  }
-  .order .title {
-    text-align: center;
-  }
-  
-  .order__form {
+    padding-bottom: 80px
+}
+
+.order .title {
+    text-align: center
+}
+
+.order__form {
     margin-top: 70px;
     padding: 0 100px;
     display: flex;
     justify-content: space-between;
-    align-items: center;
-  }
-  .order__form img {
-    transform: scale(1.5);
-  }
-  
-  .order__input {
+    align-items: center
+}
+
+.order__form img {
+    transform: scale(1.5)
+}
+
+.order__input {
     width: 280px;
     height: 50px;
     background: #fff;
-    box-shadow: 0 4px 15px rgba(0, 0, 0, 0.2);
+    box-shadow: 0 4px 15px rgba(0, 0, 0, .2);
     border: none;
     font-size: 18px;
     text-align: center;
     padding: 0 20px;
-    outline: 0;
-  }
-
+    outline: 0
+}
 
 .promotion {
     padding: 70px 0 240px 0;
-    position: relative;
-  }
-  .promotion .container {
-    display: flex;
-  }
-  .promotion .bgc_y {
+    position: relative
+}
+
+.promotion .container {
+    display: flex
+}
+
+.promotion .bgc_y {
     position: absolute;
     width: 50%;
     height: 499px;
-    background: rgba(243, 255, 222, 0.35);
+    background: rgba(243, 255, 222, .35);
     z-index: -1;
     top: -50px;
-    left: 0;
-  }
-  
-  .promotion__text {
-    width: 50%;
-  }
-  
-  .promotion__descr {
+    left: 0
+}
+
+.promotion__text {
+    width: 50%
+}
+
+.promotion__descr {
     margin-top: 40px;
     font-size: 20px;
     line-height: 24px;
-    font-weight: 300;
-  }
-  .promotion__descr span {
+    font-weight: 300
+}
+
+.promotion__descr span {
     font-weight: 700;
-    font-size: 26px;
-  }
-  
-  .promotion__timer {
-    width: 50%;
-  }
-  .promotion__timer .title {
-    text-align: right;
-  }
+    font-size: 26px
+}
+
+.promotion__timer {
+    width: 50%
+}
+
+.promotion__timer .title {
+    text-align: right
+}
 
 .promotion__timer .timer {
     margin-top: 60px;
     padding-left: 95px;
     display: flex;
     justify-content: space-between;
-    align-items: center;
-  }
-  .promotion__timer .timer__block {
+    align-items: center
+}
+
+.promotion__timer .timer__block {
     width: 102px;
     height: 120px;
     background: #fff;
-    box-shadow: 0 4px 20px rgba(0, 0, 0, 0.25);
+    box-shadow: 0 4px 20px rgba(0, 0, 0, .25);
     font-size: 16px;
     font-weight: 300;
-    text-align: center;
-  }
-  .promotion__timer .timer__block span {
+    text-align: center
+}
+
+.promotion__timer .timer__block span {
     display: block;
     margin-top: 20px;
     margin-bottom: 5px;
     font-size: 56px;
-    font-weight: 700;
-  }
-  
-  .footer {
+    font-weight: 700
+}
+
+.footer {
     min-height: 180px;
     background-color: #303030;
     padding: 45px 0 50px 0;
-    color: #fff;
-  }
-  .footer .container {
+    color: #fff
+}
+
+.footer .container {
     height: 100%;
     display: flex;
     justify-content: space-between;
-    align-items: flex-end;
-  }
-  .footer .subtitle {
-    font-size: 20px;
-  }
+    align-items: flex-end
+}
+
+.footer .subtitle {
+    font-size: 20px
+}
 
 .footer .link {
     display: block;
     margin-top: 15px;
     font-size: 16px;
-    color: #fff;
-  }
-  .footer .call {
-    text-align: right;
-  }
-  
-  .modal {
+    color: #fff
+}
+
+.footer .call {
+    text-align: right
+}
+
+.modal {
     position: fixed;
     top: 0;
     left: 0;
-    z-index: 1050;
+    z-index: 1049;
     display: none;
     width: 100%;
     height: 100%;
     overflow: hidden;
-    background-color: rgba(0, 0, 0, 0.5);
-  }
-  .modal .btn {
-    display: block;
-    width: 280px;
-    margin: 0 auto;
-  }
-  
-  .modal__dialog {
+    background-color: rgba(0, 0, 0, .5)
+}
+
+.modal__thanks {
+    display: none;
+}
+
+.modal__dialog {
+    z-index: 1050;
     max-width: 500px;
-    margin: 40px auto;
-  }
-  
-  .modal__content {
+    margin: 40px auto
+}
+
+.modal__content {
     position: relative;
     width: 100%;
     padding: 40px;
     background-color: #fff;
-    border: 1px solid rgba(0, 0, 0, 0.2);
+    border: 1px solid rgba(0, 0, 0, .2);
     border-radius: 4px;
     max-height: 80vh;
-    overflow-y: auto;
-  }
-
+    overflow-y: auto
+}
 
 .modal__close {
     position: absolute;
@@ -703,47 +718,88 @@ a {
     right: 14px;
     font-size: 30px;
     color: #000;
-    opacity: 0.5;
+    opacity: .5;
     font-weight: 700;
     border: none;
     background-color: transparent;
-    cursor: pointer;
-  }
-  
-  .modal__title {
-    text-align: center;
+    cursor: pointer
+}
+
+.modal__title {
+    text-align: center ;
     font-size: 22px;
-    text-transform: uppercase;
-  }
-  
-  .modal__input {
+    text-transform: uppercase
+}
+
+.modal__input {
     display: block;
     margin: 20px auto 20px auto;
     width: 280px;
     height: 50px;
     background: #fff;
-    box-shadow: 0 4px 15px rgba(0, 0, 0, 0.2);
+    box-shadow: 0 4px 15px rgba(0, 0, 0, .2);
     border: none;
     font-size: 18px;
     text-align: center;
     padding: 0 20px;
-    outline: 0;
-  }
+    outline: 0
+}
 
-  .show {
+.modal .btn {
     display: block;
-  }
-  
-  .hide {
-    display: none;
-  }
-  
-  .fade {
+    width: 280px;
+    margin: 0 auto
+}
+
+.show {
+    display: block
+}
+
+.hide {
+    display: none
+}
+
+.fade {
     animation-name: fade;
     animation-duration: 1.5s;
-  }
+}
 
+@keyframes fade {
+    from {
+        opacity: 0.1;
+    }
 
+    to {
+        opacity: 1;
+    }
+}
 
-  
+.carousel-indicators {
+    position: absolute;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    z-index: 15;
+    display: flex;
+    justify-content: center;
+    margin-right: 15%;
+    margin-left: 15%;
+    list-style: none;    
+}
+
+.dot {
+    box-sizing: content-box;
+    flex: 0 1 auto;
+    width: 30px;
+    height: 6px;
+    margin-right: 3px;
+    margin-left: 3px;
+    cursor: pointer;
+    background-color: #fff;
+    background-clip: padding-box;
+    border-top: 10px solid transparent;
+    border-bottom: 10px solid transparent;
+    opacity: .5;
+    transition: opacity .6s ease;
+}
 
