--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,6 +1,7 @@
 
 @import url(https://fonts.googleapis.com/css?family=Roboto:300,400,700&display=swap&subset=cyrillic-ext);
 
+@import'./media.css';
 
 * {
     box-sizing: border-box;
