--- a/src/sass/media.min.sass
+++ b/src/sass/media.min.sass
@@ -15,6 +15,9 @@
             width: 100%
             .tabcontent
                 width: 660px
+                .tab__img
+                    width: 630px
+                    height: 404.64px
                 .tabcontent__descr
                     font-size: 20px
                     width: 500px
@@ -26,9 +29,10 @@
                 &-wrapper
                     .offer__slider-inner
                         .offer__slide
-                            &_img
+                            .slider__img
                                 width: 550px
                                 height: 390px
+
     .calculating
         .container
             .calculating__field
@@ -83,6 +87,9 @@
     .preview
         .tabcontainer
             .tabcontent
+                .tab__img
+                    width: 403.11px
+                    height: 261px
                 .tabcontent__descr
                     top: 175px
                     right: -100px
@@ -101,6 +108,9 @@
                     .offer__slider-inner
                         .offer__slide
                             height: 300px
+                            .slider__img
+                                width: 350px
+                                height: 300px
     .calculating
         .container
             .calculating__field
@@ -165,6 +175,9 @@
             display: none
         .tabcontainer
             .tabcontent
+                .tab__img
+                    width: 250px
+                    height: 207px
                 .tabcontent__descr
                     top: 190px
                     right: -95px
@@ -196,6 +209,12 @@
                 width: 100%
             .offer__slider
                 width: 100%
+                .offer__slider-wrapper
+                    .offer__slider-inner
+                        .offer__slide
+                            .slider__img
+                                width: 400px
+                                height: 300px
                 .carousel-indicators
                     bottom: 11px
     .calculating
@@ -245,6 +264,7 @@
                 width: 100%
                 .title
                     text-align: center
+
 @media (max-width: 420px)
     .container
         width: 100%
@@ -273,6 +293,9 @@
             flex-direction: column
             .tabcontent
                 width: 100%
+                .tab__img
+                    width: 100%
+                    height: 100%
                 .tabcontent__descr
                     top: 200px
                     right: 0
